<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/colorBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/colorBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/bg_detail_curve">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail_movie"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/ic_back_white">

                    <TextView
                        android:id="@+id/tv_toolbar_title_detail_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:text="@string/lorem" />

                </androidx.appcompat.widget.Toolbar>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_detail_movie"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_movie">

                    <ImageView
                        android:id="@+id/img_detail_poster_movie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_detail_poster"
                        android:scaleType="fitXY"
                        tools:src="@drawable/poster_bohemian" />

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tv_detail_genre_movie"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/poppins_light"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/cd_detail_movie"
                    app:layout_constraintStart_toStartOf="@+id/cd_detail_movie"
                    app:layout_constraintTop_toBottomOf="@+id/cd_detail_movie"
                    tools:text="@string/lorem" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        style="@style/colorBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_detail_title_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/tv_detail_tag_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_title_movie"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_title_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title_movie"
                tools:text="@string/lorem" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/user_rating"
                app:layout_constraintBottom_toBottomOf="@+id/percent_detail_movie"
                app:layout_constraintStart_toEndOf="@+id/percent_detail_movie"
                app:layout_constraintTop_toTopOf="@+id/percent_detail_movie" />

            <com.ramijemli.percentagechartview.PercentageChartView
                android:id="@+id/percent_detail_movie"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_tag_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_tag_movie"
                app:pcv_backgroundBarColor="@color/gray_600"
                app:pcv_backgroundBarThickness="6dp"
                app:pcv_mode="ring"
                app:pcv_progress="64"
                app:pcv_progressBarThickness="6dp"
                app:pcv_progressColor="@color/blue_700" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_tag_movie"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_tag_movie"
                app:layout_constraintTop_toBottomOf="@+id/percent_detail_movie">

                <TextView
                    android:id="@+id/tv_detail_desc_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/poppins_medium"
                    tools:text="@string/lorem_ipsum" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>